# tokenspeed

.github/workflows/: pr-test.yml  update-tokenspeed-smg-version.yml
docs/configuration/: server.md
docs/recipes/: models.md
python/: pyproject.toml
python/tokenspeed/cli/: _proc.py  serve_smg.py
python/tokenspeed/runtime/cache/executor/: host_executor.py  memory_executor.py
python/tokenspeed/runtime/cache/transfer/: mamba_pool.py  pool.py  types.py
python/tokenspeed/runtime/configs/: model_config.py
python/tokenspeed/runtime/engine/: async_llm.py  event_loop.py  generation_output_processor.py  input_processor.py  request_stats.py
python/tokenspeed/runtime/execution/: context.py  model_executor.py
python/tokenspeed/runtime/execution/drafter/: eagle.py
python/tokenspeed/runtime/layers/attention/backends/: base.py  flash_attention.py  hybrid_linear_attn.py  mha.py  trtllm.py
python/tokenspeed/runtime/layers/moe/backends/: triton_common.py
python/tokenspeed/runtime/layers/moe/backends/mxfp4/: triton_kernel.py
python/tokenspeed/runtime/models/: gpt_oss.py  kimi_k25.py  llama.py  llama_eagle3.py  minimax_m2.py  qwen3_5.py
python/tokenspeed/runtime/models/base/: causal_lm.py
python/tokenspeed/runtime/multimodal/: embedder.py  encoder_cudagraph.py  inputs.py  mrope.py  shm_transport.py
python/tokenspeed/runtime/utils/: common.py  env.py  hf_transformers_utils.py  server_args.py
test/agentic_benchmark/sglang/: agentic_bench.sh
test/agentic_benchmark/sglang/configs/: attn_tp4_moe_ep4.sh  attn_tp4_moe_tp4.sh
test/agentic_benchmark/tokenspeed/: agentic_bench.sh
test/agentic_benchmark/vllm/: agentic_bench.sh  collect_outputs.py
test/agentic_benchmark/vllm/configs/: attn_tp4_moe_ep4.sh  attn_tp4_moe_tp4.sh
test/ci/perf/: gpt-oss-120b-mxfp4-evalscope-mi355.yaml
test/ci/ut/: ut-runtime-1gpu.yaml  ut-tokenspeed-kernel.yaml
test/ci_system/: install_deps.sh  pipeline.py  test_pipeline.py
test/cli/: test_serve_smg_unit.py
test/runtime/: test_generation_output_processor.py  test_resolve_architecture.py
test/runtime/cache/: test_transfer_host_executor.py
test/runtime/models/: test_generation_models.py
tokenspeed-kernel/python/requirements/: cuda-thirdparty.txt
tokenspeed-kernel/python/tokenspeed_kernel/ops/attention/: __init__.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/attention/flash_attn/: __init__.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/attention/flashinfer/: __init__.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/attention/triton/: __init__.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/moe/: gluon.py  triton_kernels.py
tokenspeed-kernel/test/: conftest.py  test_callsite_selection.py  test_registry.py  test_selection.py
tokenspeed-kernel/test/ops/: test_moe_gluon_warp_decode.py
