# Copyright (c) 2026 LightSeek Foundation
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenspeed"
version = "0.1.0"
description = "TokenSpeed is a speed-of-light LLM inference engine."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiohttp",
    "compressed-tensors",
    "dill",
    "einops",
    "fastapi",
    "hf_transfer",
    "huggingface_hub",
    "modelscope",
    "msgspec",
    "ninja",
    "numpy",
    "openai>=2.24.1",
    "openai-harmony",
    "orjson",
    "packaging",
    "partial-json-parser",
    "peft",
    "pillow",
    "prometheus-client",
    "psutil",
    "pybase64",
    "pybind11",
    "pydantic",
    "py-spy",
    "pytest-asyncio",
    "python-multipart",
    "pyzmq",
    "requests",
    "setproctitle",
    "tiktoken",
    "tokenspeed-mooncake>=0.3.11.post20260527",
    "tokenspeed-smg==1.5.0.post20260622",
    "tokenspeed-smg-grpc-proto==0.4.10.post20260622",
    "tokenspeed-smg-grpc-servicer==0.5.6.post20260622",
    "torch==2.11.0",
    # Tag-capable sleep/wake allocator (region(tag, enable_cpu_backup)/pause/
    # resume). Bundles cu12/cu13 binaries; import-guarded so it's a no-op unless
    # --enable-memory-saver is set. See runtime/utils/torch_memory_saver_adapter.py.
    "torch_memory_saver==0.0.9.post1",
    "torchvision",
    "tqdm",
    "transformers==5.12.0",
    "uv",
    "uvicorn",
    "uvloop",
    "xgrammar==0.2.2",
    "viztracer",
]

[project.scripts]
tokenspeed = "tokenspeed.cli:main"
ts = "tokenspeed.cli:main"

[project.urls]
"Homepage" = "https://github.com/lightseekorg/tokenspeed"

[tool.setuptools]
license-files = ["LICENSE", "THIRDPARTYNOTICES"]

[tool.setuptools.packages.find]
include = ["tokenspeed*"]
